# LightBox

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
tests/: conftest.py  requirements.txt  test_conditional_features.py  test_git_setup.py  test_integration.py  test_template_generation.py
{{cookiecutter.project_slug}}/: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
{{cookiecutter.project_slug}}/.claude/skills/lightbox/: SKILL.md
{{cookiecutter.project_slug}}/configs/: {{cookiecutter.model_name}}.yaml
{{cookiecutter.project_slug}}/scripts/: train_{{cookiecutter.model_name}}.py  {{cookiecutter.model_name}}_hpo.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_hpo_search_space.py
{{cookiecutter.project_slug}}/tests/helpers/: __init__.py  hpo_utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  paths.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/data/: __init__.py  datamodule.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/hpo/: __init__.py  config.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/models/: __init__.py  base.py
