[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.author_email}}"},
]
dependencies = [
    "torch",
    "lightning",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["{{cookiecutter.package_name}}*"]
exclude = ["tests*", "external*"]

[tool.black]
line-length = 100
target-version = ["py{{cookiecutter.python_version.replace('.', '')}}"]
exclude = '''
/(
    \.git
    | external
    | tmp
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["external", ".git", "tmp"]
